# Battlesnake

./: .gitignore  LICENSE  README.md  agent.py  agentRewrite.py  game_runner.py  main.py  model.py  pyproject.toml  server.py
battlesnake_rl/: agent.py  agentRewrite.py  game_runner.py  main.py
battlesnake_rl/model/: model.pth
src/battlesnake_gdoerksen/: agent.py  agentRewrite.py  game_runner.py  main.py
src/battlesnake_gdoerksen/model/: model.pth
tests/: conftest.py  test_agentRewrite.py
tests/resources/: game_state_solo_start.json
