[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "battlesnake_gdoerksen"
version = "0.0.1"
authors = [
  { name="Graham Doerksen", email="gdoerkse@ucalgary.ca"},
]
description = "Deep reinforcement learning for the game of Battlesnake"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/gdoerksen/Battlesnake"
"Bug Tracker" = "https://github.com/gdoerksen/Battlesnake/issues"


[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]