[tool.poetry]
name = "battlesnake-rl"
version = "0.1.0"
description = "AI for playing Battlesnake"
authors = ["gdoerksen <gramdoer@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "battlesnake_rl"}]

[tool.poetry.dependencies]
python = "3.7.*"
Flask = "2.2.2"
pytest = "^7.1.3"
numpy = "^1.21.6"
torch = { url = "https://download.pytorch.org/whl/cu113/torch-1.12.1%2Bcu113-cp37-cp37m-win_amd64.whl"}
torchaudio = { url = "https://download.pytorch.org/whl/cu113/torchaudio-0.12.1%2Bcu113-cp37-cp37m-win_amd64.whl"}
torchvision = { url = "https://download.pytorch.org/whl/cu113/torchvision-0.13.1%2Bcu113-cp37-cp37m-win_amd64.whl"}




[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


